--- a/config/apm-server/apm-server.yml
+++ b/config/apm-server/apm-server.yml
@@ -2,7 +2,7 @@ apm-server.frontend.enabled: true
 
 output.elasticsearch:
   hosts: ['elasticsearch:9200']
-  protocol: "https"
+  protocol: "http"
   username: elastic
   # Read PW from apm-server.keystore
   password: "${ELASTIC_PASSWORD}"
