--- a/config/heartbeat/heartbeat.yml
+++ b/config/heartbeat/heartbeat.yml
@@ -2,7 +2,7 @@ heartbeat.monitors:
 - type: http
   schedule: '@every 5s'
   urls:
-    - https://elasticsearch:9200
+    - http://elasticsearch:9200
     - http://kibana:5601
   ssl:
     certificate_authorities: ["/usr/share/heartbeat/certs/ca/ca.crt"]
@@ -18,7 +18,7 @@ processors:
 
 output.elasticsearch:
   hosts: ['elasticsearch:9200']
-  protocol: "https"
+  protocol: "http"
   username: elastic
   # Read PW from heartbeat.keystore
   password: "${ELASTIC_PASSWORD}"
