--- a/config/metricbeat/metricbeat.yml
+++ b/config/metricbeat/metricbeat.yml
@@ -2,12 +2,21 @@ metricbeat.config.modules:
   path: ${path.config}/modules.d/*.yml
   reload.enabled: false
 
+metricbeat.modules:
+- module: prometheus
+  metricsets: ["collector"]
+  enabled: true
+  period: 10s
+  hosts: ["prometheus:9090"]
+  #metrics_path: /metrics
+  #namespace: container
+
 processors:
 - add_cloud_metadata:
 
 output.elasticsearch:
   hosts: ['elasticsearch:9200']
-  protocol: "https"
+  protocol: "http"
   username: elastic
   # Read PW from metricbeat.keystore
   password: "${ELASTIC_PASSWORD}"
